# tantiny-in-memory

./: CHANGELOG.md  Cargo.toml  Gemfile  README.md  tantiny-in-memory.gemspec
.github/workflows/: build.yml  release.yml
lib/: tantiny-in-memory.rb
lib/tantiny/: index.rb  schema.rb  version.rb
spec/tantiny/: helpers_spec.rb  index_spec.rb
src/: index.rs  query.rs  tokenizer.rs
